# servo

./: Cargo.toml  test_video.html
.github/workflows/: main.yml  windows-mpv.yml  windows-release-mpv.yml
components/media/backends/auto/: Cargo.toml  lib.rs
components/media/backends/gstreamer/: lib.rs
components/media/backends/mpv/: Cargo.toml  events.rs  lib.rs  player.rs  render.rs  stream.rs
components/servo/: Cargo.toml  servo.rs
ports/servoshell/: Cargo.toml
